# piepy

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_simple.py
src/piepy/: __init__.py  core.py  crypto.py  schema.py  utils.py
tests/: test_crypto.py  test_placeholder.py  test_schema.py  test_utils.py
