[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piepy"
version = "0.7.2"
description = "πpy - aSchema-validated envelopes using HPKE in Python now"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Ugly Unicorn" }
]
dependencies = [
    "pydantic>=2.12.5",
    "pyhpke>=0.6.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
fixable = ["ALL"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=piepy --cov-report=lcov:lcov.info --cov-report=term-missing"

[tool.coverage.run]
source = ["src/piepy"]
